# YOPO

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODEBASE.md  Makefile  PrimitivesAnalysis.md  README.md  deploy.yaml  pyproject.toml
Controller/src/so3_control/include/so3_control/: mavros_interface.h
Controller/src/so3_quadrotor_simulator/include/quadrotor_simulator/: Quadrotor.h
Controller/src/so3_quadrotor_simulator/src/: quadrotor_simulator_so3.cpp
Controller/src/utils/uav_utils/include/uav_utils/: utils.h
Simulator/src/: CMakeLists.txt
Simulator/src/include/: maps.hpp
YOPO/: cli.py  schema.py
YOPO/config/: __init__.py  traj_opt.yaml
YOPO/export/: __init__.py  benchmark.py  exporter.py  metadata.py
YOPO/loss/: __init__.py  esdf_gpu.py  guidance_loss.py  loss_function.py  safety_loss.py  smoothness_loss.py
YOPO/policy/: __init__.py  poly_solver.py  primitive.py  state_transform.py  yopo_dataset.py  yopo_network.py  yopo_trainer.py
YOPO/policy/models/: __init__.py  backbone.py  head.py  resnet.py
docker/: CMakeLists_standalone.txt  data_generation.Dockerfile
docker/data-gen/: CMakeLists.txt  Dockerfile  entrypoint.sh  setup-apt-mirror.sh
docker/data-gen/include/: maps.hpp
docker/train/: Dockerfile  entrypoint.sh
docs/: artifacts.md  component.puml  data-flow.puml  deployment.puml  state-machine.puml
